<resources>
    <string name="app_name">Splash_Screen</string>

    <!-- OnBoarding string -->
    <string name="first_slider_title">Confucius</string>
    <string name="second_slider_title">Socrates</string>
    <string name="third_slider_title">Oprah Winfrey</string>
    <string name="fourth_slider_title">Confucius</string>

    <!-- Description -->
    <string name="first_slider_desc">Respect yourself and others will respect you.</string>
    <string name="second_slider_desc">The way to gain a good reputation is to endeavor to be what you desire to appear.</string>
    <string name="third_slider_desc">Everything in your world is created by what you think.</string>
    <string name="fourth_slider_desc">Respect yourself and others will respect you.</string>

    <!--button-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_btn">Lets Get Started</string>

    <!--main_page-->
    <string name="order_online_collect">Order\nonline\ncollect</string>
    <string name="order_collect_desc">Available when you\n purchase any new\n iPhone, iPad, iPod\n Touch</string>
    <string name="product_viewed">Product Viewed</string>
    <string name="see_more">see more</string>
    <string name="CATEGORIES">CATEGORIES</string>

    <!--    menu-->
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="products">PRODUCTS</string>
    <string name="location">LOCATION</string>

    <string name="login">LOGIN</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

    <string name="menu_01">Menu_01</string>
    <string name="menu_02">Menu_02</string>
    <string name="menu_03">Menu_03</string>
    <string name="menu_04">Menu_04</string>

    <string name="share">Share</string>
    <string name="contact_us">Contact Us</string>

    <!--    menu holder-->
    <string name="menu_top">LOGO Title</string>
    <string name="menu_desc">Hit the orange button down</string>


</resources>