<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/title_home"/>

        <item
            android:id="@+id/nav_search"
            android:title="@string/search"
            android:icon="@drawable/title_search"/>

        <item
            android:id="@+id/nav_products"
            android:title="@string/products"
            android:icon="@drawable/title_products"/>

        <item
            android:id="@+id/nav_location"
            android:title="@string/location"
            android:icon="@drawable/title_location"/>

    </group>

    <item android:title="Profile">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login"
                    android:icon="@drawable/login"/>

                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/profile"/>

                <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/logout"/>


            </group>
        </menu>
    </item>

    <item android:title="Categories">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_menu_01"
                    android:title="@string/menu_01"
                    android:icon="@drawable/menu_01"/>

                <item
                    android:id="@+id/nav_menu_02"
                    android:title="@string/menu_02"
                    android:icon="@drawable/menu_02"/>

                <item
                    android:id="@+id/nav_menu_03"
                    android:title="@string/menu_03"
                    android:icon="@drawable/menu_03"/>

                <item
                    android:id="@+id/nav_menu_04"
                    android:title="@string/menu_04"
                    android:icon="@drawable/menu_04"/>


            </group>
        </menu>
    </item>

    <item android:title="Share">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_share"
                    android:title="@string/share"
                    android:icon="@drawable/share"/>

                <item
                    android:id="@+id/nav_contact_us"
                    android:title="@string/contact_us"
                    android:icon="@drawable/contact_us"/>

            </group>
        </menu>
    </item>

</menu>